# liblsl

./: .appveyor.yml  .appveyor_disabled.yml  .artifactignore  .bintray.json  .clang-tidy  .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  BUILD.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  LSLCMake.cmake  README.md  RELEASECHECKLIST.md  appveyor.yml  azure-pipelines.yml  build_manylinux.sh  lsl.entitlements  meta.yaml  pi.cmake  standalone_compilation_linux.sh  update_lslboost.bat  update_lslboost.sh
examples/: BenchmarkSyncVsAsync.cpp  CMakeLists.txt  GetAllStreams.cpp  GetFullinfo.cpp  GetTimeCorrection.cpp  HandleMetaData.cpp  HandleMetaDataC.c  README.md  ReceiveData.cpp  ReceiveDataC.c  ReceiveDataInChunks.cpp  ReceiveDataSimple.cpp  ReceiveStringMarkers.cpp  ReceiveStringMarkersC.c  SendData.cpp  SendDataC.c  SendDataCBlocking.c  SendDataInChunks.cpp  SendDataMinimal.cpp  SendDataSimple.cpp  SendDataSyncBlocking.cpp  SendMultipleStreams.cpp  SendStringMarkers.cpp  SendStringMarkersC.c  TestSyncWithoutData.cpp
lslboost/: CMakeLists.txt  additional_headers.h  asio_objects.cpp  boost-thread-windows.patch  serialization_objects.cpp
lslboost/boost/: any.hpp  array.hpp  assert.hpp  blank.hpp  blank_fwd.hpp  concept_check.hpp  cstdint.hpp  current_function.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  io_fwd.hpp  lexical_cast.hpp  limits.hpp  memory_order.hpp  multi_index_container.hpp  next_prior.hpp  none.hpp  none_t.hpp  operators.hpp  pointee.hpp  rational.hpp  static_assert.hpp  throw_exception.hpp  token_functions.hpp  type_index.hpp
lslboost/boost/align/: alignment_of.hpp  alignment_of_forward.hpp
lslboost/boost/archive/: archive_exception.hpp  basic_archive.hpp  basic_binary_iarchive.hpp  basic_binary_iprimitive.hpp  basic_binary_oarchive.hpp  basic_binary_oprimitive.hpp  basic_text_iarchive.hpp  basic_text_iprimitive.hpp  basic_text_oarchive.hpp  basic_text_oprimitive.hpp  basic_xml_archive.hpp  basic_xml_iarchive.hpp  basic_xml_oarchive.hpp  binary_iarchive.hpp  binary_iarchive_impl.hpp  binary_oarchive.hpp  binary_oarchive_impl.hpp  binary_wiarchive.hpp  binary_woarchive.hpp  codecvt_null.hpp  dinkumware.hpp  polymorphic_binary_iarchive.hpp  polymorphic_binary_oarchive.hpp  polymorphic_iarchive.hpp  polymorphic_oarchive.hpp  polymorphic_text_iarchive.hpp  polymorphic_text_oarchive.hpp  polymorphic_text_wiarchive.hpp  polymorphic_text_woarchive.hpp  polymorphic_xml_iarchive.hpp  polymorphic_xml_oarchive.hpp  polymorphic_xml_wiarchive.hpp  polymorphic_xml_woarchive.hpp  text_iarchive.hpp  text_oarchive.hpp  text_wiarchive.hpp  text_woarchive.hpp  xml_archive_exception.hpp  xml_iarchive.hpp  xml_oarchive.hpp  (+2 more)
lslboost/boost/asio/: any_io_executor.hpp  associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  coroutine.hpp  datagram_socket_service.hpp  deadline_timer.hpp  deadline_timer_service.hpp  defer.hpp  detached.hpp  dispatch.hpp  (+55 more)
lslboost/boost/assert/: source_location.hpp
lslboost/boost/atomic/: atomic.hpp  atomic_flag.hpp  atomic_ref.hpp  fences.hpp  ipc_atomic.hpp  ipc_atomic_flag.hpp  ipc_atomic_ref.hpp
lslboost/boost/bind/: bind.hpp  bind_mf2_cc.hpp  bind_mf_cc.hpp  bind_template.hpp  mem_fn.hpp  placeholders.hpp  storage.hpp
lslboost/boost/chrono/: floor.hpp  round.hpp  system_clocks.hpp
lslboost/boost/concept/: usage.hpp
lslboost/boost/container/: allocator_traits.hpp  container_fwd.hpp  flat_set.hpp  new_allocator.hpp  options.hpp  scoped_allocator.hpp  throw_exception.hpp  uses_allocator.hpp  vector.hpp
lslboost/boost/container_hash/: extensions.hpp  hash.hpp  hash_fwd.hpp
lslboost/boost/core/: addressof.hpp  alloc_construct.hpp  allocator_access.hpp  checked_delete.hpp  default_allocator.hpp  explicit_operator_bool.hpp  first_scalar.hpp  ignore_unused.hpp  noinit_adaptor.hpp  noncopyable.hpp  nvp.hpp  pointer_traits.hpp  ref.hpp  swap.hpp  typeinfo.hpp  (+2 more)
testing/: CMakeLists.txt  CMakeLists.txt.in  DataType.cpp  asiocancel.cpp  bench_ext_bounce.cpp  bench_ext_common.cpp  bench_ext_pushpull.cpp  bench_int_sleep.cpp  bench_int_timesync.cpp  blackhole.cpp  catch.hpp  catch_main.cpp  discovery.cpp  flood.c  helper_type.hpp  helpers.h  inireader.cpp  lsl.lua  lslver.c  spike.cpp  streaminfo.cpp  stringfuncs.cpp  test_ext_DataType.cpp  test_ext_discovery.cpp  test_ext_move.cpp  test_ext_streaminfo.cpp  test_ext_time.cpp  test_int_asiocancel.cpp  test_int_inireader.cpp  test_int_network.cpp  test_int_samples.cpp  test_int_streaminfo.cpp  test_int_stringfuncs.cpp  time.cpp  timesync.cpp
testing/BounceTest/: BounceTest.cpp
testing/SpeedTest/: SpeedTest.cpp
testing/StressTest/: StressTest.cpp
testing/SyncTest/: main.cpp
testing/UnitTests/: CMakeLists.txt  DataType.cpp  asiocancel.cpp
testing/common/: bytecmp.cpp  bytecmp.hpp  create_streampair.hpp
testing/ext/: DataType.cpp  bench_bounce.cpp  bench_common.cpp  bench_pushpull.cpp  discovery.cpp  move.cpp  streaminfo.cpp  sync_outlet.cpp  time.cpp
testing/int/: bench_sleep.cpp  bench_timesync.cpp  inireader.cpp  loguruthreadnames.cpp  network.cpp  postproc.cpp  runtime_config.cpp  samples.cpp  sendbuffer.cpp  serialization_v100.cpp  streaminfo.cpp  stringfuncs.cpp  sync_endian.cpp  tcpserver.cpp
testing/internal/: api_config.cpp  postproc.cpp  serialization_v100.cpp  tcpserver.cpp
testing/lslcfgs/: debuglog.cfg  default.cfg  ipv4_lsl100.cfg  ipv4only.cfg  ipv6_lsl100.cfg  ipv6only.cfg
(+1870 files in other folders)
